--- a/ToolAppModule/BitmapAssistant/src/main/res/layout/activity_main.xml
+++ b/ToolAppModule/BitmapAssistant/src/main/res/layout/activity_main.xml
@@ -1,48 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="15dp"
+    tools:context="com.example.bmpa.MainActivity">
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="15dp"
-        tools:context="com.example.bmpa.MainActivity">
+        android:layout_height="match_parent">
 
-    <Button
-            android:id="@+id/btn_create_bmp"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:textSize="18sp"
-            android:text="创建1920x1080尺寸的图片"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <Button
-            android:id="@+id/btn_sobmp_scale_target"
-            android:layout_width="match_parent"
-            android:text="图片缩放至1920x1080"
-            android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/btn_create_bmp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="创建1920x1080尺寸的图片"
+                android:textSize="18sp" />
 
-    <Button
-            android:id="@+id/btn_sobmp_crop_target"
-            android:layout_width="match_parent"
-            android:text="原图->图片裁剪700x700"
-            android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/btn_sobmp_scale_target"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="图片缩放至1920x1080" />
 
-    <Button
-            android:id="@+id/btn_scbmp_crop_target"
-            android:layout_width="match_parent"
-            android:text="缩放图->图片裁剪700x700"
-            android:layout_height="wrap_content"/>
-    <Button
-            android:id="@+id/btn_sobmp_crop_target_by_brd"
-            android:layout_width="match_parent"
-            android:text="原图->图片裁剪700x700(BitmapRegionDecoder区域截图)"
-            android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/btn_sobmp_crop_target"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="原图->图片裁剪700x700" />
 
-    <Button
-            android:id="@+id/btn_scbmp_crop_target_by_brd"
-            android:layout_width="match_parent"
-            android:text="缩放图->图片裁剪700x700(BitmapRegionDecoder区域截图)"
-            android:layout_height="wrap_content"/>
+            <Button
+                android:id="@+id/btn_scbmp_crop_target"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="缩放图->图片裁剪700x700" />
+
+            <Button
+                android:id="@+id/btn_sobmp_crop_target_by_brd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="原图->图片裁剪700x700(BitmapRegionDecoder区域截图)" />
+
+            <Button
+                android:id="@+id/btn_scbmp_crop_target_by_brd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="缩放图->图片裁剪700x700(BitmapRegionDecoder区域截图)" />
+
+            <Button
+                android:id="@+id/btn_load_cicle_by_glide"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="glide加载BDR 700x700 最终图" />
+
+            <ImageView
+                android:id="@+id/image_view"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp" />
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
