--- a/ToolAppModule/FileTransferAssistant/src/main/res/xml/nfc_tech_filter.xml
+++ b/ToolAppModule/FileTransferAssistant/src/main/res/xml/nfc_tech_filter.xml
@@ -1,9 +1,31 @@
 <resources>
 
+    <!-- 可以处理所有Android支持的NFC类型 -->
     <tech-list>
-
-        <tech>android.nfc.tech.MifareClassic</tech>
-
+        <tech>android.nfc.tech.IsoDep</tech>
     </tech-list>
-
+    <tech-list>
+        <tech>android.nfc.tech.NfcA</tech>
+    </tech-list>
+    <tech-list>
+        <tech>android.nfc.tech.NfcB</tech>
+    </tech-list>
+    <tech-list>
+        <tech>android.nfc.tech.NfcF</tech>
+    </tech-list>
+    <tech-list>
+        <tech>android.nfc.tech.NfcV</tech>
+    </tech-list>
+    <tech-list>
+        <tech>android.nfc.tech.Ndef</tech>
+    </tech-list>
+    <tech-list>
+        <tech>android.nfc.tech.NdefFormatable</tech>
+    </tech-list>
+    <tech-list>
+        <tech>android.nfc.tech.MifareUltralight</tech>
+    </tech-list>
+    <tech-list>
+        <tech>android.nfc.tech.MifareClassic</tech>
+    </tech-list>
 </resources>
