--- a/ToolAppModule/FileTransferAssistant/src/main/res/layout/activity_main.xml
+++ b/ToolAppModule/FileTransferAssistant/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.fta.FtpHomeActivity">
+        tools:context="com.example.fta.ui.activity.FtpHomeActivity">
 
     <ScrollView
             android:layout_width="match_parent"
