图片助手工程重构，硬件助手工程添加

--- a/ToolAppModule/BitmapAssistant/src/main/res/layout/activity_main.xml
+++ b/ToolAppModule/BitmapAssistant/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="15dp"
-    tools:context="com.example.bmpa.MainActivity">
+    tools:context="com.example.bmpa.PicCropScaleActivity">
 
     <ScrollView
         android:layout_width="match_parent"
