玩转andorid首页功能实现，轮播图列表和数据列表数据获取

--- a/MvpModules/WanAndroid/src/main/res/layout/activity_main.xml
+++ b/MvpModules/WanAndroid/src/main/res/layout/activity_main.xml
@@ -23,12 +23,13 @@
                 android:layout_height="match_parent"
                 android:layout_above="@+id/ll_bottom_menu" />
 
+            <!--android:background="@color/steelblue"-->
+
             <LinearLayout
                 android:id="@+id/ll_bottom_menu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:background="@color/steelblue"
                 android:orientation="horizontal"
                 android:padding="5dp">
 
