--- a/MvpModules/WanAndroid/src/main/res/layout/layout_item_article_list.xml
+++ b/MvpModules/WanAndroid/src/main/res/layout/layout_item_article_list.xml
@@ -38,6 +38,8 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/tv_author"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
