web浏览及搜索界面功能实现

--- a/MvpModules/WanAndroid/src/main/res/layout/main_header_banner.xml
+++ b/MvpModules/WanAndroid/src/main/res/layout/main_header_banner.xml
@@ -4,11 +4,9 @@
     android:layout_height="200dp"
     android:orientation="vertical">
 
-
     <com.zhiyangstudio.commonlib.widget.BannerViewPager
-        android:id="@+id/viewPager"
+        android:id="@+id/banner_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="200dp" />
 
 </LinearLayout>
