--- a/MvpModules/WanAndroid/src/main/res/layout/activity_base_wan_android.xml
+++ b/MvpModules/WanAndroid/src/main/res/layout/activity_base_wan_android.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -15,9 +16,11 @@
         app:contentInsetStartWithNavigation="0dp"
         app:titleTextColor="@color/white" />
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/app_bg"
+        android:orientation="vertical" />
 
 </LinearLayout>
