--- a/MvpModules/WanAndroid/src/main/res/layout/activity_main.xml
+++ b/MvpModules/WanAndroid/src/main/res/layout/activity_main.xml
@@ -21,15 +21,21 @@
                 android:id="@+id/fl_home_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@+id/ll_bottom_menu" />
+                android:layout_above="@+id/ll_bottom_menu"
+                android:background="@color/app_bg" />
 
-            <!--android:background="@color/steelblue"-->
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_above="@+id/ll_bottom_menu"
+                android:background="@color/grey" />
 
             <LinearLayout
                 android:id="@+id/ll_bottom_menu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
+                android:background="@color/white"
                 android:orientation="horizontal"
                 android:padding="5dp">
 
