--- a/MvpModules/WanAndroid/src/main/res/values/colors.xml
+++ b/MvpModules/WanAndroid/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="_60ffffff">#60ffffff</color>
     <color name="_20000000">#20000000</color>
     <color name="_10000000">#10000000</color>
+    <color name="c_e0e0e0">#e9e9e9</color>
 </resources>
