--- a/MvpModules/WanAndroid/src/main/res/layout/layout_item_test_list.xml
+++ b/MvpModules/WanAndroid/src/main/res/layout/layout_item_test_list.xml
@@ -4,4 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="65dp"
     android:gravity="center"
-    android:text="test" />
+    android:text="test"
+    android:textColor="@color/black" />
