--- a/MvpModules/WanAndroid/src/main/res/layout/layout_item_article_list.xml
+++ b/MvpModules/WanAndroid/src/main/res/layout/layout_item_article_list.xml
@@ -61,7 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/tv_title"
-            android:src="@drawable/ic_favorite_gray_24dp" />
+            app:srcCompat="@drawable/ic_favorite_gray_24dp" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
