--- a/MvpModules/WanAndroid/src/main/res/layout/layout_item_article_list.xml
+++ b/MvpModules/WanAndroid/src/main/res/layout/layout_item_article_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
@@ -8,7 +9,6 @@
     android:layout_marginTop="10dp"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?attr/selectableItemBackground"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="2dp"
     app:cardElevation="1dp"
@@ -61,7 +61,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/tv_title"
-            app:srcCompat="@drawable/ic_favorite_gray_24dp" />
+            android:src="@drawable/ic_favorite_gray_24dp"
+            tools:ignore="VectorDrawableCompat" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
