--- a/MvpModules/WanAndroid/src/main/res/values-v21/styles.xml
+++ b/MvpModules/WanAndroid/src/main/res/values-v21/styles.xml
@@ -3,9 +3,9 @@
     <!--沉浸式5.0以上-->
     <style name="AppTheme" parent="AppTheme.Base">
         <!--透明状态栏-->
-        <item name="android:windowTranslucentStatus">false</item>
+        <item name="android:windowTranslucentStatus">true</item>
         <!--透明导航栏-->
-        <item name="android:windowTranslucentNavigation">true</item>
+         <item name="android:windowTranslucentNavigation">false</item>
         <!--使状态栏，导航栏可绘制-->
         <item name="android:windowDrawsSystemBarBackgrounds" tools:ignore="NewApi">true</item>
         <item name="android:searchViewStyle" tools:ignore="NewApi">@style/SearchViewStyle</item>
@@ -13,4 +13,5 @@
         <!--Android 5.x开始需要把颜色设置透明，否则导航栏会呈现系统默认的浅灰色-->
         <item name="android:statusBarColor" tools:ignore="NewApi">@color/_0091ea</item>
     </style>
+
 </resources>
