--- a/MvpModules/WanAndroid/src/main/res/values/styles.xml
+++ b/MvpModules/WanAndroid/src/main/res/values/styles.xml
@@ -48,4 +48,9 @@
         <!--menu菜单按下效果-->.
         <!--<item name="android:selectableItemBackground">@drawable/menu_bg_selector</item>-->
     </style>
+
+    <style name="MyTabLayoutTextAppearance" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
