--- a/MvpModules/WanAndroidAdvance/src/main/res/values/styles.xml
+++ b/MvpModules/WanAndroidAdvance/src/main/res/values/styles.xml
@@ -1,11 +1,55 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/_0091ea</item>
+        <item name="colorPrimaryDark">@color/trans</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="android:windowAnimationStyle">@style/WindowAnimation</item>
+        <!--沉浸式状态栏-->
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+
     </style>
 
+    <!--定义Toolbar样式-->
+    <style name="ToolBarStyle" parent="@style/ThemeOverlay.AppCompat">
+        <!--toolbar 标题和溢出菜单按钮字体的颜色-->
+        <!--<item name="android:textColorPrimary">@android:color/white</item>-->
+        <!--系统图标的颜色-->
+        <item name="android:textColorSecondary">@color/white</item>
+        <!--actionbar 按下效果-->
+        <!--<item name="android:actionBarItemBackground">@drawable/action_bar_bg_selector</item>-->
+        <!--自定义溢出的menu样式-->
+        <item name="actionOverflowMenuStyle">@style/overflowMenuStyle</item>
+        <!--弹出菜单字体颜色-->
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <!--溢出菜单样式-->
+    <style name="overflowMenuStyle" parent="@style/Widget.AppCompat.PopupMenu.Overflow">
+        <item name="android:dropDownWidth" tools:ignore="NewApi">wrap_content</item>
+        <!--设置不覆盖锚点-->
+        <item name="overlapAnchor">false</item>
+        <!--popmenu背景颜色-->
+        <item name="android:popupBackground">@color/white</item>
+        <!--偏移量-->
+        <item name="android:dropDownVerticalOffset" tools:ignore="NewApi">-4dp</item>
+        <item name="android:dropDownHorizontalOffset">0dp</item>
+        <!--menu菜单按下效果-->.
+        <!--<item name="android:selectableItemBackground">@drawable/menu_bg_selector</item>-->
+    </style>
+
+    <style name="WindowAnimation">
+        <item name="android:activityOpenEnterAnimation">@anim/push_left_in</item>
+        <item name="android:activityOpenExitAnimation">@anim/push_left_out</item>
+        <item name="android:activityCloseEnterAnimation">@anim/push_right_in</item>
+        <item name="android:activityCloseExitAnimation">@anim/push_right_out</item>
+    </style>
+
+    <style name="AppTheme.FullScreen">
+        <item name="android:windowFullscreen">true</item>
+    </style>
 </resources>
