--- a/MvpModules/WanAndroidAdvance/src/main/res/values/styles.xml
+++ b/MvpModules/WanAndroidAdvance/src/main/res/values/styles.xml
@@ -24,8 +24,9 @@
         <!--<item name="android:actionBarItemBackground">@drawable/action_bar_bg_selector</item>-->
         <!--自定义溢出的menu样式-->
         <item name="actionOverflowMenuStyle">@style/overflowMenuStyle</item>
+        <item name="android:textColor">@color/white</item>
         <!--弹出菜单字体颜色-->
-        <item name="android:textColor">@color/black</item>
+        <item name="actionMenuTextColor">@color/white</item>
     </style>
 
     <!--溢出菜单样式-->
@@ -51,5 +52,9 @@
 
     <style name="AppTheme.FullScreen">
         <item name="android:windowFullscreen">true</item>
+    </style>
+
+    <style name="CustomerCheckboxStyle" parent="@android:style/Widget.CompoundButton.CheckBox">
+        <item name="android:button">@drawable/selector_checkbox</item>
     </style>
 </resources>
