--- a/MvpModules/WanAndroidAdvance/src/main/res/layout/fragment_settings.xml
+++ b/MvpModules/WanAndroidAdvance/src/main/res/layout/fragment_settings.xml
@@ -2,11 +2,41 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:padding="@dimen/dp_15">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/ll_menu_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/btn_logoff"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/lightgrey"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:text="注册设备"
+            android:textSize="@dimen/dp_16" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_10"
+            android:background="@color/lightgrey"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:text="修改密码"
+            android:textSize="@dimen/dp_16" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_logoff"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="settings" />
+        android:layout_alignParentBottom="true"
+        android:text="退出登录" />
 
 </RelativeLayout>
