--- a/MvpModules/WanAndroidAdvance/src/main/res/layout/activity_login.xml
+++ b/MvpModules/WanAndroidAdvance/src/main/res/layout/activity_login.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@mipmap/icon_wan_android">
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_120"
+        android:gravity="center"
+        android:text="用户验证"
+        android:textColor="@color/black"
+        android:textSize="@dimen/dp_24" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_120"
-        android:orientation="vertical">
+        android:layout_below="@id/tv_title"
+        android:layout_marginTop="@dimen/dp_20"
+        android:orientation="vertical"
+        android:padding="@dimen/dp_15">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_uname"
@@ -27,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_15"
-            android:hint="请输入用户名">
+            android:hint="请输入密码">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/et_pwd"
