--- a/MvpModules/WanAndroidAdvance/src/main/res/layout/fragment_settings.xml
+++ b/MvpModules/WanAndroidAdvance/src/main/res/layout/fragment_settings.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/btn_device_reg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/lightgrey"
