代码逻辑调整,移除测试数据

--- a/MvpModules/WanAndroidAdvance/src/main/res/layout/fragment_settings.xml
+++ b/MvpModules/WanAndroidAdvance/src/main/res/layout/fragment_settings.xml
@@ -30,7 +30,8 @@
             android:gravity="center_vertical"
             android:padding="10dp"
             android:text="修改密码"
-            android:textSize="@dimen/dp_16" />
+            android:textSize="@dimen/dp_16"
+            android:visibility="gone" />
     </LinearLayout>
 
     <Button
@@ -38,6 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:text="退出登录" />
+        android:text="退出登录"
+        android:visibility="gone" />
 
 </RelativeLayout>
