--- a/MvpModules/WanAndroidAdvance/src/main/res/layout/activity_account_reg.xml
+++ b/MvpModules/WanAndroidAdvance/src/main/res/layout/activity_account_reg.xml
@@ -46,33 +46,34 @@
                 android:id="@+id/et_pwd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:imeOptions="actionNext"
+                android:inputType="textPassword" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/til_con_pwd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_15"
+            android:hint="请确认输入密码">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/et_con_pwd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword" />
 
         </android.support.design.widget.TextInputLayout>
 
-        <LinearLayout
+        <Button
+            android:id="@+id/btn_account_reg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_15"
             android:layout_marginTop="@dimen/dp_45"
-            android:orientation="horizontal">
+            android:text="注册" />
 
-            <Button
-                android:id="@+id/btn_login"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="登录" />
-
-            <Button
-                android:id="@+id/btn_account_reg"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_15"
-                android:layout_weight="1"
-                android:text="注册"
-                android:visibility="gone" />
-
-        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
