--- a/MvpModules/DaggerWanAndroid/src/main/res/values/colors.xml
+++ b/MvpModules/DaggerWanAndroid/src/main/res/values/colors.xml
@@ -19,4 +19,6 @@
     <color name="_20000000">#20000000</color>
     <color name="_10000000">#10000000</color>
     <color name="c_e0e0e0">#e9e9e9</color>
+    <color name="delete_text">#CCCCCC</color>
+    <color name="c_fffff9">#fffff9</color>
 </resources>
