--- a/MvpModules/DaggerWanAndroid/src/main/res/values/styles.xml
+++ b/MvpModules/DaggerWanAndroid/src/main/res/values/styles.xml
@@ -45,4 +45,6 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
 </resources>
