--- a/AppModules/DaggerDemo/src/main/res/layout/activity_login.xml
+++ b/AppModules/DaggerDemo/src/main/res/layout/activity_login.xml
@@ -32,7 +32,8 @@
                 android:id="@+id/et_uname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:imeOptions="actionNext" />
+                android:imeOptions="actionNext"
+                android:text="kefu02" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -47,7 +48,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:text="123456" />
 
         </android.support.design.widget.TextInputLayout>
 
