--- a/AppModules/DaggerDemo/src/main/res/layout/fragment_settings.xml
+++ b/AppModules/DaggerDemo/src/main/res/layout/fragment_settings.xml
@@ -23,6 +23,17 @@
             android:textSize="@dimen/dp_16" />
 
         <TextView
+            android:id="@+id/btn_mp_android_chart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/lightgrey"
+            android:gravity="center_vertical"
+            android:layout_marginTop="@dimen/dp_10"
+            android:padding="10dp"
+            android:text="MPAndroidChart控件示例"
+            android:textSize="@dimen/dp_16" />
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_10"
@@ -31,7 +42,8 @@
             android:padding="10dp"
             android:text="修改密码"
             android:textSize="@dimen/dp_16"
-            android:visibility="gone" />
+            android:visibility="visible" />
+
     </LinearLayout>
 
     <Button
