--- a/AppModules/DaggerDemo/src/main/res/layout/activity_device_detail.xml
+++ b/AppModules/DaggerDemo/src/main/res/layout/activity_device_detail.xml
@@ -8,21 +8,69 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/line_chart1"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="180dp" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/line_chart2"
-            android:layout_width="match_parent"
-            android:layout_height="180dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/c_ffcccccc"
+                android:paddingLeft="@dimen/dp_6"
+                android:text="0c"
+                android:textColor="@color/black"
+                android:textSize="@dimen/dp_12" />
 
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/line_chart3"
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/line_chart1"
+                android:layout_width="match_parent"
+                android:layout_height="180dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="180dp" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/c_ffcccccc"
+                android:paddingLeft="@dimen/dp_6"
+                android:text="0c"
+                android:textColor="@color/black"
+                android:textSize="@dimen/dp_12" />
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/line_chart2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/c_ffcccccc"
+                android:paddingLeft="@dimen/dp_6"
+                android:text="0c"
+                android:textColor="@color/black"
+                android:textSize="@dimen/dp_12" />
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/line_chart3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+
+        </LinearLayout>
+
 
     </LinearLayout>
 </ScrollView>
