--- a/AppModules/DaggerDemo/src/main/res/values/colors.xml
+++ b/AppModules/DaggerDemo/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="_20000000">#20000000</color>
     <color name="_10000000">#10000000</color>
     <color name="c_e0e0e0">#e9e9e9</color>
+    <color name="c_ffcccccc">#FFCCCCCC</color>
 </resources>
