--- a/AppModules/DaggerDemo/src/main/res/layout/activity_device_detail.xml
+++ b/AppModules/DaggerDemo/src/main/res/layout/activity_device_detail.xml
@@ -46,7 +46,7 @@
             <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/line_chart2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="180dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -66,8 +66,7 @@
             <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/line_chart3"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
+                android:layout_height="180dp" />
 
         </LinearLayout>
 
