--- a/AppModules/DaggerDemo/src/main/res/layout/activity_login.xml
+++ b/AppModules/DaggerDemo/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionNext"
-                android:text="kefu02" />
+                android:text="fhwcl" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
