--- a/AppModules/DaggerDemo/src/main/res/layout/fragment_settings.xml
+++ b/AppModules/DaggerDemo/src/main/res/layout/fragment_settings.xml
@@ -26,11 +26,22 @@
             android:id="@+id/btn_mp_android_chart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_10"
             android:background="@color/lightgrey"
             android:gravity="center_vertical"
-            android:layout_marginTop="@dimen/dp_10"
             android:padding="10dp"
             android:text="MPAndroidChart控件示例"
+            android:textSize="@dimen/dp_16" />
+
+        <TextView
+            android:id="@+id/btn_filter_menu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_10"
+            android:background="@color/lightgrey"
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:text="筛选菜单"
             android:textSize="@dimen/dp_16" />
 
         <TextView
