--- a/AppModules/DaggerDemo/src/main/res/layout/activity_filter_old.xml
+++ b/AppModules/DaggerDemo/src/main/res/layout/activity_filter_old.xml
@@ -26,7 +26,7 @@
             android:layout_height="match_parent"
             android:background="@color/violet" />
 
-        <com.zhiyangstudio.commonlib.widget.LoadingLayout
+        <com.zhiyangstudio.commonlib.widget.recyclerview.LoadingLayout
             android:id="@+id/loading_view"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -37,7 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/wheat" />
-        </com.zhiyangstudio.commonlib.widget.LoadingLayout>
+        </com.zhiyangstudio.commonlib.widget.recyclerview.LoadingLayout>
 
     </LinearLayout>
 
