--- a/AppModules/DaggerDemo/src/main/res/layout/layout_dialog_filter.xml
+++ b/AppModules/DaggerDemo/src/main/res/layout/layout_dialog_filter.xml
@@ -1,139 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/gray">
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
     <LinearLayout
-        android:layout_width="@dimen/dp_180"
+        android:layout_width="@dimen/dp_200"
         android:layout_height="match_parent"
-        android:background="@color/gray"
-        android:orientation="vertical">
+        android:background="@color/white"
+        android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:background="@color/bisque"
-            android:gravity="center"
-            android:text="1" />
+        <LinearLayout
+            android:layout_width="20dp"
+            android:layout_height="match_parent"
+            android:background="@color/blanchedalmond"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:background="@color/bisque"
-            android:gravity="center"
-            android:text="1" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:background="@color/bisque"
-            android:gravity="center"
-            android:text="1" />
+        </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:background="@color/bisque"
-            android:gravity="center"
-            android:text="1" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:background="@color/bisque"
-            android:gravity="center"
-            android:text="1" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:background="@color/bisque"
-            android:gravity="center"
-            android:text="1" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:background="@color/bisque"
-            android:gravity="center"
-            android:text="1" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:background="@color/bisque"
-            android:gravity="center"
-            android:text="1" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:background="@color/bisque"
-            android:gravity="center"
-            android:text="1" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:background="@color/bisque"
-            android:gravity="center"
-            android:text="1" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:background="@color/bisque"
-            android:gravity="center"
-            android:text="1" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:background="@color/bisque"
-            android:gravity="center"
-            android:text="1" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:background="@color/bisque"
-            android:gravity="center"
-            android:text="1" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:background="@color/bisque"
-            android:gravity="center"
-            android:text="1" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_60"
-            android:layout_marginBottom="@dimen/dp_5"
-            android:background="@color/bisque"
-            android:gravity="center"
-            android:text="1" />
-
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/red" />
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/dp_5"
-        android:background="@color/lightcyan" />
 </LinearLayout>
