--- a/AppModules/DaggerDemo/src/main/res/layout/layout_item_device_list_online.xml
+++ b/AppModules/DaggerDemo/src/main/res/layout/layout_item_device_list_online.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/rl_root"
     android:layout_height="wrap_content"
     android:background="@color/material_teal_400"
     android:padding="@dimen/dp_15">
