--- a/AppModules/DaggerDemo/src/main/res/values/styles.xml
+++ b/AppModules/DaggerDemo/src/main/res/values/styles.xml
@@ -57,4 +57,20 @@
     <style name="CustomerCheckboxStyle" parent="@android:style/Widget.CompoundButton.CheckBox">
         <item name="android:button">@drawable/selector_checkbox</item>
     </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    
+    <style name="activity_DialogTransparent">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.2</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">fill_parent</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Translucent
+        </item> <!--Activity切换动画效果-->
+    </style>
+
+    <style name="tip_no_more_data">没有更多数据</style>
 </resources>
