--- a/AppModules/DaggerDemo/src/main/res/layout/fragment_settings.xml
+++ b/AppModules/DaggerDemo/src/main/res/layout/fragment_settings.xml
@@ -67,6 +67,29 @@
             android:visibility="visible" />
 
         <TextView
+            android:id="@+id/tv_date_select"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_10"
+            android:background="@color/lightgrey"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="日期选择"
+            android:textSize="@dimen/dp_16"
+            android:visibility="visible" />
+        <TextView
+            android:id="@+id/tv_notifications"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_10"
+            android:background="@color/lightgrey"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Notifications"
+            android:textSize="@dimen/dp_16"
+            android:visibility="visible" />
+
+        <TextView
             android:id="@+id/btn_information_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
