--- a/AppModules/DaggerDemo/src/main/res/layout/layout_item_customer_list.xml
+++ b/AppModules/DaggerDemo/src/main/res/layout/layout_item_customer_list.xml
@@ -15,22 +15,24 @@
         android:textColor="@color/black"
         android:textSize="18sp" />
 
-    <ImageView
+   <!-- <ImageView
         android:id="@+id/iv_check"
         android:layout_width="@dimen/dp_30"
         android:layout_height="@dimen/dp_30"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:background="@drawable/ic_checked"
-        android:visibility="invisible" />
-    <!--<CheckBox
+        android:visibility="invisible" />-->
+
+    <CheckBox
         android:id="@+id/cb_customer"
-        style="@style/CustomerCheckboxStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dp_30"
+        android:layout_height="@dimen/dp_30"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:background="@drawable/selector_checkbox"
+        android:button="@null"
         android:checked="false"
-        android:clickable="false" />-->
+        android:clickable="false" />
 
 </RelativeLayout>
