--- a/AppModules/SampleSmartHome/src/main/res/layout/layout_item_list_wifi.xml
+++ b/AppModules/SampleSmartHome/src/main/res/layout/layout_item_list_wifi.xml
@@ -7,15 +7,15 @@
 	android:paddingLeft="@dimen/dp_10"
 	android:paddingRight="@dimen/dp_10">
 	
-	<!--	<CheckBox
-			android:id="@+id/cb_customer_group"
-			android:layout_width="@dimen/dp_30"
-			android:layout_height="@dimen/dp_30"
-			android:layout_centerVertical="true"
-			android:background="@drawable/selector_checkbox"
-			android:button="@null"
-			android:checked="false"
-			android:clickable="false" />-->
+	<CheckBox
+		android:id="@+id/cb_customer_group"
+		android:layout_width="@dimen/dp_18"
+		android:layout_height="@dimen/dp_12"
+		android:layout_centerVertical="true"
+		android:background="@drawable/selector_checkbox"
+		android:button="@null"
+		android:checked="false"
+		android:clickable="false" />
 	
 	<TextView
 		android:id="@+id/tv_wifi_name"
@@ -23,8 +23,9 @@
 		android:layout_height="wrap_content"
 		android:layout_centerVertical="true"
 		android:layout_marginLeft="@dimen/dp_5"
+		android:layout_toRightOf="@id/cb_customer_group"
 		android:text="cc"
-		android:textColor="@color/black"
+		android:textColor="@color/white"
 		android:textSize="@dimen/dp_16" />
 
 </RelativeLayout>
