--- a/MvpModules/Bailan/src/main/res/drawable/selector_list_item.xml
+++ b/MvpModules/Bailan/src/main/res/drawable/selector_list_item.xml
@@ -14,7 +14,7 @@
 	</item>
 	<item>
 		<shape android:shape="rectangle">
-			<solid android:color="@color/c_0091ea" />
+			<solid android:color="@color/sr_color_primary" />
 			<!--<stroke android:width="0.5dp" android:color="#dcdcdc" />-->
 		</shape>
 	</item>
