--- a/MvpModules/Bailan/src/main/res/layout/activity_main.xml
+++ b/MvpModules/Bailan/src/main/res/layout/activity_main.xml
@@ -20,6 +20,9 @@
 	<android.support.v4.view.ViewPager
 		android:id="@+id/vp_main"
 		android:layout_width="match_parent"
+		android:fadeScrollbars="false"
+		android:fadingEdge="none"
+		android:overScrollMode="never"
 		android:layout_height="match_parent" />
 
 
