推荐列表功能实现

--- a/MvpModules/Bailan/src/main/res/layout/layout_item_recommend_bannder.xml
+++ b/MvpModules/Bailan/src/main/res/layout/layout_item_recommend_bannder.xml
@@ -3,8 +3,8 @@
 	android:layout_width="match_parent"
 	android:layout_height="@dimen/dp_112">
 	
-	<android.support.v7.widget.RecyclerView
-		android:id="@+id/rcv_banner"
+	<com.example.bailan.widget.RecyclerBanner
+		android:id="@+id/rb_banner"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent" />
+		android:layout_height="@dimen/dp_120" />
 </FrameLayout>
